<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/single_form_updown_margin"
        android:paddingTop="@dimen/single_form_updown_margin"
        tools:context=".NuevaCosechaActivity">
        <TextView
            android:id="@+id/tvOrigenHacienda"
            android:layout_width="match_parent"
            android:text="@string/tv_origen_hacienda"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnOrigenHacienda"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvOrigenHacienda"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvCamion"
            android:layout_width="match_parent"
            android:text="@string/tv_camion"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnOrigenHacienda"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnCamion"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvCamion"
            android:layout_height="wrap_content"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvControlador"
            android:layout_width="match_parent"
            android:text="@string/tv_controlador"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnCamion"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnControlador"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvControlador"
            android:layout_height="wrap_content"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvDestino"
            android:layout_width="match_parent"
            android:text="@string/tv_destino"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnControlador"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnDestino"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvDestino"
            android:layout_height="wrap_content"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvAserrador"
            android:layout_width="match_parent"
            android:text="@string/tv_aserrador"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnDestino"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnAserrador"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvAserrador"
            android:layout_height="wrap_content"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvCodigoPo"
            android:layout_width="match_parent"
            android:text="@string/tv_codigo_po"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnAserrador"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/etCodigoPo"
            android:layout_width="match_parent"
            android:hint="@string/hint_po"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvCodigoPo"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvOrigenMadera"
            android:layout_width="match_parent"
            android:text="@string/tv_origen_madera"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/etCodigoPo"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnOrigenMadera"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvOrigenMadera"
            android:layout_height="wrap_content"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvFechaTumba"
            android:layout_width="match_parent"
            android:text="@string/tv_fecha_tumba"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnOrigenMadera"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:id="@+id/etFechaTumba"
            android:layout_width="match_parent"
            android:hint="@string/hint_fecha_tumba"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvFechaTumba"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvGuiaRemision"
            android:layout_width="match_parent"
            android:text="@string/tv_guia_remision"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/etFechaTumba"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/etGuiaRemision"
            android:layout_width="match_parent"
            android:hint="@string/hint_guia_remision"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvGuiaRemision"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvGuiaForestal"
            android:layout_width="match_parent"
            android:text="@string/tv_guia_forestal"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/etGuiaRemision"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/etGuiaForestal"
            android:layout_width="match_parent"
            android:hint="@string/hint_guia_forestal"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvGuiaForestal"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvTipoMadera"
            android:layout_width="match_parent"
            android:text="@string/tv_tipo_madera"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/etGuiaForestal"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnTipoMadera"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvTipoMadera"
            android:layout_height="wrap_content"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvFormatoEntrega"
            android:layout_width="match_parent"
            android:text="@string/tv_formato_entrega"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnTipoMadera"
            android:layout_height="wrap_content"></TextView>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:layout_width="match_parent"
            android:id="@+id/spnFormatoEntrega"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvFormatoEntrega"
            android:layout_height="wrap_content"></com.toptoche.searchablespinnerlibrary.SearchableSpinner>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvMaterial"
            android:enabled="false"
            android:layout_width="match_parent"
            android:text="@string/tv_material"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/spnFormatoEntrega"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            android:id="@+id/etMaterial"
            app:layout_constraintTop_toBottomOf="@id/tvMaterial"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvFechaDespacho"
            android:layout_width="match_parent"
            android:text="@string/fecha_despacho"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/etMaterial"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:inputType="date"
            android:focusable="false"
            android:clickable="false"
            android:maxLines="1"
            android:id="@+id/etFechaDespacho"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvFechaDespacho"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvDiasT2k"
            android:layout_width="match_parent"
            android:text="@string/dias_t2k"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/etFechaDespacho"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:inputType="date"
            android:focusable="false"
            android:clickable="false"
            android:maxLines="1"
            android:id="@+id/etDiasT2k"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvDiasT2k"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_marginTop="@dimen/space_form_margin"
            android:id="@+id/tvValorFlete"
            android:layout_width="match_parent"
            android:text="@string/valor_flete"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/etDiasT2k"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:inputType="numberDecimal"
            android:focusable="false"
            android:clickable="false"
            android:maxLines="1"
            android:id="@+id/etValorFlete"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            app:layout_constraintTop_toBottomOf="@id/tvValorFlete"
            android:layout_height="wrap_content"></EditText>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
