<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:padding="@dimen/menu_button_padding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorGrey"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/menu_margin_top"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@android:drawable/ic_menu_rotate"
            android:text="@string/update_db"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            android:layout_width="match_parent"
            android:id="@+id/btnActualizar"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNuevaCosecha"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            android:padding="@dimen/menu_button_padding"
            app:layout_constraintTop_toBottomOf="@id/btnActualizar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/md_indigo_500"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/menu_margin_top"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:text="@string/nueva_cosecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCosechasTerminadas"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            android:padding="@dimen/menu_button_padding"
            app:layout_constraintTop_toBottomOf="@id/btnNuevaCosecha"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/md_green_400"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/menu_margin_top"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@android:drawable/ic_menu_upload"
            android:text="@string/cosechas_terminadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCosechasHistorial"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            android:padding="@dimen/menu_button_padding"
            app:layout_constraintTop_toBottomOf="@id/btnCosechasTerminadas"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/md_blue_300"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/menu_margin_top"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@android:drawable/ic_menu_recent_history"
            android:text="@string/cosechas_historial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCerrarSesion"
            android:layout_marginLeft="@dimen/side_form_margin"
            android:layout_marginRight="@dimen/side_form_margin"
            android:padding="@dimen/menu_button_padding"
            app:layout_constraintTop_toBottomOf="@id/btnCosechasHistorial"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/menu_margin_top"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>